docs/self-hosted-server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mila-asr
  labels:
    app: mila-asr
