docs/self-hosted-server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mila-asr
  namespace: mila-asr
  labels:
    app: mila-asr
spec:
  type: ClusterIP
  selector:
    app: mila-asr
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
